# nextjs-django-tutors

./: .env.example  .gitignore  API.md  GETTING_STARTED.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json  plan.txt
.github/workflows/: ci.yml
backend/: .pre-commit-config.yaml  conftest.py  pyproject.toml  schema.json  schema.yaml
backend/apps/bookings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/bookings/migrations/: 0001_initial.py
backend/apps/bookings/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
backend/apps/chat/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/apps/chat/migrations/: 0001_initial.py
backend/apps/chat/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
backend/apps/core/: admin.py  apps.py  feature_flags.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/core/tests/: factories.py  test_feature_flags.py  test_models.py  test_serializers.py  test_views.py
backend/apps/events/: admin.py  models.py  producer.py  tasks.py
backend/apps/events/migrations/: 0001_initial.py
backend/apps/payments/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/payments/migrations/: 0001_initial.py
backend/apps/payments/tests/: factories.py  test_models.py  test_serializers.py  test_tasks.py  test_views.py
backend/apps/tutors/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/tutors/management/commands/: reindex_search.py  seed.py
backend/apps/tutors/migrations/: 0001_initial.py  0002_add_tutor_draft.py  0003_add_tutor_catalog_fields.py
backend/apps/tutors/tests/: __init__.py  factories.py  test_filters.py  test_models.py  test_serializers.py  test_tutor_draft.py  test_views.py
backend/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: __init__.py  test_smoke.py
deploy/: aws-ecs-fargate-plan.txt
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
frontend/: biome.json  next.config.ts  orval.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.mts  vitest.config.ts
frontend/.husky/: pre-commit  pre-push
frontend/src/: auth.ts  middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/__tests__/: layout.test.tsx  page.test.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/bookings/: page.tsx
frontend/src/app/bookings/__tests__/: utils.test.ts
frontend/src/app/chat/: page.tsx
frontend/src/app/chat/[roomId]/: page.tsx
frontend/src/app/login/: login-content.tsx  page.tsx
frontend/src/app/login/__tests__/: page.test.tsx
frontend/src/app/tutors/: loading.tsx  page.tsx  search-params.ts
frontend/src/app/tutors/[slug]/: page.tsx
frontend/src/app/tutors/__tests__/: search-params.test.ts
frontend/src/app/tutors/create/: page.tsx
frontend/src/components/admin/: admin-dashboard.tsx  bookings-table.tsx  table-pagination.tsx  table-skeleton.tsx  tutors-table.tsx
frontend/src/components/admin/__tests__/: admin-dashboard.test.tsx  bookings-table.test.tsx  table-pagination.test.tsx  table-skeleton.test.tsx  tutors-table.test.tsx
frontend/src/components/features/: bookings-client.tsx  tutor-card.tsx  tutor-filters.tsx  tutor-grid-client.tsx
frontend/src/components/features/__tests__/: bookings-client.test.tsx  tutor-card.test.tsx  tutor-filters.test.tsx  tutor-grid-client.test.tsx
frontend/src/components/features/auth/: credentials-form.tsx  sign-in-button.tsx  user-menu.tsx
frontend/src/components/features/chat/: chat-input.tsx  chat-message.tsx  chat-room.tsx  index.ts
frontend/src/components/features/checkout/: payment-form.tsx
frontend/src/components/features/layout/: header.tsx
frontend/src/components/features/tutor-wizard/: availability-step.tsx  index.ts  location-step.tsx  personal-info-step.tsx  pricing-step.tsx  subjects-step.tsx  tutor-wizard.tsx  wizard-navigation.tsx  wizard-provider.tsx  wizard-steps.tsx
frontend/src/components/ui/: animated-card.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  file-upload.tsx  form-field.tsx  input.tsx  label.tsx  select.tsx  skeleton.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx
frontend/src/hooks/: use-chat.ts  use-media-query.ts  use-search.ts
frontend/src/hooks/__tests__/: use-chat.test.ts  use-media-query.test.ts
frontend/src/lib/: api-client.ts  experiment-tracking.ts  motion.ts  search-client.ts  utils.ts
frontend/src/lib/__tests__/: api-client.test.ts  experiment-tracking.test.ts  motion.test.ts  search-client.test.ts
frontend/src/lib/api/: tutors.ts
frontend/src/lib/schemas/: tutor-profile.ts
frontend/src/providers/: feature-flags-provider.tsx  index.ts
frontend/src/providers/__tests__/: feature-flags-provider.test.tsx
frontend/src/stores/: chat-store.ts
frontend/src/stores/__tests__/: chat-store.test.ts
frontend/tests/: setup.ts  test-utils.ts
services/search/: .air.toml  .gitignore  Dockerfile  Dockerfile.dev  README.md  go.mod  go.sum
services/search/cmd/search/: main.go
services/search/internal/api/: handlers.go  handlers_test.go  middleware.go  middleware_test.go  router.go
services/search/internal/domain/: tutor.go  tutor_test.go
services/search/internal/handler/: handler.go  handler_test.go
services/search/internal/kafka/: consumer.go  consumer_test.go  event.go  event_test.go
services/search/internal/opensearch/: client.go  index.go  index_test.go  interface.go  tutor.go  tutor_test.go
solution-design/: CJM.md  PRD.md  diagrams.puml
tech-summaries/: backend.md  backend_interview.md  frontend-glossary.md  frontend.md  glossary-backend.md
terraform/: backend.tf
terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars  variables.tf  vpc.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
(+21 files in other folders)
