[project]
name = "tutors-backend"
version = "0.1.0"
description = "Tutors Marketplace Backend"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "staticfiles",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "DJ",     # flake8-django
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value comparison
    "ARG001",   # unused function argument (common in Django views)
    "ARG002",   # unused method argument
    "RUF012",   # mutable class attributes (normal Django pattern for Meta, serializers, etc.)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",      # Unused arguments in tests are fine
    "PLR2004",  # Magic values in tests
]
"**/migrations/*.py" = [
    "ALL",      # Ignore all rules in migrations
]
"manage.py" = [
    "PLC0415",  # Import inside function is intentional in Django manage.py
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django", "rest_framework", "drf_spectacular", "channels"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
branch = true
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

