[project]
name = "tutors-backend"
version = "0.1.0"
description = "Tutors Marketplace Backend"
requires-python = ">=3.12"
dependencies = [
    # Django
    "Django>=5.2,<5.3",
    "djangorestframework>=3.15,<3.16",
    "django-cors-headers>=4.6,<5.0",
    "django-environ>=0.11,<0.12",
    "django-filter>=24.3,<25.0",
    # API Documentation
    "drf-spectacular>=0.29,<0.30",
    # Database
    "psycopg[binary]>=3.2,<4.0",
    "dj-database-url>=2.3,<3.0",
    # Redis
    "redis>=5.2,<6.0",
    "django-redis>=5.4,<6.0",
    # Async / WebSockets
    "channels>=4.3,<5.0",
    "channels-redis>=4.2,<5.0",
    "uvicorn[standard]>=0.34,<1.0",
    # Background Tasks
    "celery>=5.4,<5.5",
    "django-celery-beat>=2.7,<3.0",
    "django-celery-results>=2.5,<3.0",
    # Storage
    "boto3>=1.35,<2.0",
    "django-storages>=1.14,<2.0",
    # Search
    "opensearch-py>=2.8,<3.0",
    # Feature Flags
    "UnleashClient>=6.1,<7.0",
    # Utilities
    "Pillow>=11.0,<12.0",
    "python-dateutil>=2.9,<3.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "pytest-cov>=6.0,<7.0",
    "pytest-asyncio>=0.24,<1.0",
    "factory-boy>=3.3,<4.0",
    "faker>=33.1,<34.0",
    # Code Quality
    "ruff>=0.8,<1.0",
    "pre-commit>=4.0,<5.0",
    # Development Utilities
    "ipython>=8.30,<9.0",
    "django-extensions>=3.2,<4.0",
    "Werkzeug>=3.1,<4.0",
    "django-debug-toolbar>=4.4,<5.0",
    # Documentation
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
]
prod = [
    # Production Server
    "gunicorn>=23.0,<24.0",
    # Monitoring
    "sentry-sdk[django]>=2.19,<3.0",
    # Security
    "django-csp>=4.0,<5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "staticfiles",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "DJ",     # flake8-django
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value comparison
    "ARG001",   # unused function argument (common in Django views)
    "ARG002",   # unused method argument
    "RUF012",   # mutable class attributes (normal Django pattern for Meta, serializers, etc.)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",      # Unused arguments in tests are fine
    "PLR2004",  # Magic values in tests
    "PLC0415",  # Import inside function is fine in tests
]
"**/tests/**/*.py" = [
    "ARG",      # Unused arguments in tests are fine
    "PLR2004",  # Magic values in tests
    "PLC0415",  # Import inside function is fine in tests
]
"**/migrations/*.py" = [
    "ALL",      # Ignore all rules in migrations
]
"manage.py" = [
    "PLC0415",  # Import inside function is intentional in Django manage.py
]
"**/filters.py" = [
    "PLC0415",  # Import inside function to avoid circular imports
]
"**/serializers.py" = [
    "PLC0415",  # Import inside method to avoid circular imports
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django", "rest_framework", "drf_spectacular", "channels"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango60Warning",
]

[tool.coverage.run]
branch = true
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

